# SnippetGeneration

./: .gitignore  README.md  THOUGHTS.md  pyproject.toml  requirements.txt  run.py
input/: data.csv  data_one.csv
