[tool.poetry]
name = "snippetgeneration"
version = "0.1.0"
description = ""
authors = ["zam <azamolot@tcd.je>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.44.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
